--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,36 +1,43 @@
-.logo a {
-  margin-top: 2.5%;
-  margin-bottom: 2.5%;
-  padding-left: 15%;
-  padding-right: 15%;
+.logo {
   background-color: #044254;
-  height: 10px;
-  width: 10px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
   background-color: #0F8592;
   margin: 0;
-}
-
-.header {
-  background-color: #044254;
   color: white;
 }
 
-footer p {
-  color: white;
+main {
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: center;
 }
 
 .nav-items {
   background-color: #7DA7B0;
-  font-size: 20px;
-  height: 50px;
+  font-size: 18px;
+  text-decoration: none;
+  height: 45px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
 
+footer {
+  margin-top: 47%;
+  background-color: #032231;
+  height: 170px;
+}
+
 .contact-info {
+  line-spacing: 1%;
+}
+
+footer p {
   color: white;
 }/*# sourceMappingURL=style.css.map */
