--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -2,6 +2,7 @@
 .logo {
     background-color: #044254;
     height: 100px;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,29 +15,35 @@ body {
 }
 
 main {
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 20px;
     text-align: center;
 }
 
-.nav-items {
+.nav-items a {
     background-color: #7DA7B0;
-    font-size: 18px;
+    color: #044254;
     text-decoration: none;
+    font-size: 20px;
     height: 45px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
+.nav-items a:hover {
+    background-color: #7DA7B0;
+    color: #5FC8DF;
+}
+
 footer {
-    margin-top: 47%;
+    margin-bottom: 0;
     background-color: #032231;
-    height: 170px;
+    height: 100px;
 }
 
 .contact-info {
-    line-spacing: 1%;
+    margin: 2px;
+    line-height: 0.5;
 }
 
 
