--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,43 +1,77 @@
-.logo {
+header {
   background-color: #044254;
-  height: 100px;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+header .logo {
+  display: flex;
+  height: 100px;
+  width: 100px;
   justify-content: center;
   align-items: center;
 }
 
-body {
-  background-color: #0F8592;
-  margin: 0;
-  color: white;
-}
-
-main {
-  padding-left: 5%;
-  padding-right: 5%;
-  text-align: center;
-}
-
 .nav-items {
   background-color: #7DA7B0;
-  font-size: 18px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-decoration: none;
   height: 45px;
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
+.nav-items a {
+  text-decoration: none;
+  font-size: 20px;
+  color: #044254;
+}
+.nav-items a:hover {
+  color: #5FC8DF;
+  text-shadow: #044254;
+}
+
+main {
+  padding: 20px;
+  height: 80%;
+  text-align: center;
+}
+
+body {
+  background-color: #0F8592;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 0px;
+  color: white;
+}
 
 footer {
-  margin-top: 47%;
+  position: absolute;
+  bottom: 0;
   background-color: #032231;
-  height: 170px;
+  height: 100px;
+  width: 100%;
 }
-
-.contact-info {
-  line-spacing: 1%;
+footer .social-media-1 p {
+  padding-top: 1.2%;
+  padding-left: 1.5%;
+  list-style: none;
 }
-
-footer p {
+footer .social-media-1 li {
+  padding-left: 3.5%;
+  list-style: none;
+}
+footer .social-media-2 li {
+  padding-left: 1.5%;
+  list-style: none;
+}
+footer .contact-info {
+  margin: 2px;
+  line-height: 0.5;
+  flex-direction: row;
+  align-items: baseline;
+}
+footer footer p {
   color: white;
 }/*# sourceMappingURL=style.css.map */
