--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,13 +8,13 @@ header {
 header .logo {
   display: flex;
   height: 100px;
-  width: 100px;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
 
 .nav-items {
-  background-color: #7DA7B0;
+  background-color: #7da7b0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-decoration: none;
   height: 45px;
@@ -29,7 +29,7 @@ header .logo {
   color: #044254;
 }
 .nav-items a:hover {
-  color: #5FC8DF;
+  color: #5fc8df;
   text-shadow: #044254;
 }
 
@@ -37,41 +37,30 @@ main {
   padding: 20px;
   height: 80%;
   text-align: center;
+  letter-spacing: 0.2mm;
 }
 
 body {
-  background-color: #0F8592;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  margin: 0px;
+  min-height: 100vh;
+  margin: 0;
+  background-color: #0f8592;
   color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
   position: absolute;
   bottom: 0;
   background-color: #032231;
-  height: 100px;
+  height: 170px;
   width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  line-height: 2mm;
 }
-footer .social-media-1 p {
-  padding-top: 1.2%;
-  padding-left: 1.5%;
-  list-style: none;
-}
-footer .social-media-1 li {
-  padding-left: 3.5%;
-  list-style: none;
-}
-footer .social-media-2 li {
-  padding-left: 1.5%;
-  list-style: none;
-}
-footer .contact-info {
-  margin: 2px;
-  line-height: 0.5;
-  flex-direction: row;
-  align-items: baseline;
-}
-footer footer p {
-  color: white;
+footer p {
+  flex-wrap: wrap;
 }/*# sourceMappingURL=style.css.map */
