--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,28 +1,28 @@
 header {
-    background-color: #044254;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  background-color: #044254;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
   .logo {
     display: flex;
     height: 100px;
-    width: 100px; 
+    width: 100%;
     justify-content: center;
     align-items: center;
   }
 }
 
 .nav-items {
-    background-color: #7DA7B0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text-decoration: none;
-    height: 45px;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+  background-color: #7da7b0;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-decoration: none;
+  height: 45px;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 
   a {
     text-decoration: none;
@@ -31,61 +31,40 @@ header {
   }
 
   a:hover {
-    color: #5FC8DF;
+    color: #5fc8df;
     text-shadow: #044254;
   }
 }
 
 main {
-    padding: 20px;
-    height: 80%;
-    text-align: center;
+  padding: 20px;
+  height: 80%;
+  text-align: center;
+  letter-spacing: 0.2mm;
 }
 
 body {
-    background-color: #0F8592;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    text
-    margin: 0px;
-    color: white;
+  min-height: 100vh;
+  margin: 0;
+  background-color: #0f8592;
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
     position: absolute;
     bottom: 0;
     background-color: #032231;
-    height: 100px;
+    height: 170px;
     width: 100%;
-
-  .social-media-1 {
-    p {
-      padding-top: 1.2%;
-      padding-left: 1.5%; 
-      list-style: none;   
-    }
-
-    li {
-      padding-left: 3.5%;
-      list-style: none;
-    }
-  }
-
-  .social-media-2 {
-    li {
-      padding-left: 1.5%;
-      list-style: none;
-    }
-  }
-
-  .contact-info {
-    margin: 2px;
-    line-height: 0.5;
-    flex-direction: row;
-    align-items: baseline;
-  }
-
-  footer p {
-    color: white;
-  }
-
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    line-height: 2mm;
+    
+      p {
+        flex-wrap: wrap;
+      }
 }
