Added multiple pages, need to figure out why styling drops off when going back to the index page.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -29,8 +29,7 @@ header .logo {
   color: #044254;
 }
 .nav-items a:hover {
-  color: #5fc8df;
-  text-shadow: #044254;
+  color: #FCE0C1;
 }
 
 main {
