--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,10 +33,39 @@ header .logo {
 }
 
 main {
+  margin: 10px;
   padding: 20px;
   height: 80%;
   text-align: center;
   letter-spacing: 0.2mm;
+}
+
+.blog {
+  margin: 5px;
+  border: 20px;
+  padding: 5px;
+}
+
+.blog-cards {
+  margin: 10px;
+  padding: 10px;
+  background-color: #FAB588;
+  display: flex;
+}
+.blog-cards img {
+  padding: 10px;
+  background-color: #FCE0C1;
+  width: 150px;
+  flex-direction: column;
+  align-items: left;
+}
+.blog-cards .blog-text {
+  background-color: #FCE0C1;
+  color: #032231;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: right;
 }
 
 body {
@@ -49,17 +78,26 @@ body {
   flex-direction: column;
 }
 
-footer {
-  position: absolute;
+.footer {
+  position: relative;
   bottom: 0;
   background-color: #032231;
-  height: 170px;
+  height: 150px;
+  width: 100%;
+  background-repeat: repeat;
+  background-attachment: scroll;
+  background-position: 0% 0%;
+}
+
+.footer-contents {
+  margin: auto;
+  height: 150px;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   line-height: 2mm;
 }
-footer p {
+.footer-contents p {
   flex-wrap: wrap;
 }/*# sourceMappingURL=style.css.map */
