--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -36,11 +36,44 @@ header {
 }
 
 main {
+  margin: 10px;
   padding: 20px;
   height: 80%;
   text-align: center;
   letter-spacing: 0.2mm;
 }
+
+.blog {
+  margin: 5px;
+  border: 20px;
+  padding: 5px;
+}
+
+  .blog-cards {
+    margin: 10px;
+    padding: 10px;
+    background-color: #FAB588;
+    display: flex;
+    
+    
+
+    img {
+      padding: 10px;
+      background-color: #FCE0C1;
+      width: 150px;
+      flex-direction: column;
+      align-items: left;
+    }
+
+    .blog-text {
+    background-color: #FCE0C1;
+    color: #032231;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    }
+  }
 
 body {
   min-height: 100vh;
@@ -52,18 +85,28 @@ body {
   flex-direction: column;
 }
 
-footer {
-    position: absolute;
+.footer {
+    position: relative;
     bottom: 0;
     background-color: #032231;
-    height: 170px;
+    height: 150px;
     width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    line-height: 2mm;
-    
-      p {
-        flex-wrap: wrap;
-      }
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-position: 0% 0%;
+}
+
+.footer-contents {
+  margin: auto;
+  height: 150px;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  line-height: 2mm;
+  
+    p {
+      flex-wrap: wrap;
+    }
+  
 }
