--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -54,8 +54,6 @@ main {
     padding: 10px;
     background-color: #FAB588;
     display: flex;
-    
-    
 
     img {
       padding: 10px;
@@ -66,6 +64,7 @@ main {
     }
 
     .blog-text {
+    padding: 7px;
     background-color: #FCE0C1;
     color: #032231;
     text-align: left;
@@ -74,6 +73,11 @@ main {
     align-items: right;
     }
   }
+
+form * { 
+  display: block;
+}
+    
 
 body {
   min-height: 100vh;
@@ -109,4 +113,29 @@ body {
       flex-wrap: wrap;
     }
   
+}
+
+@media screen and (min-width: 600px) {
+  .blog-cards {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  img {
+    flex-direction: column;
+    align-items: left;
+  }
+
+  .blog-text {
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    line-height: 2mm;
+  }
 }
