--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -35,12 +35,57 @@ header {
   }
 }
 
+body {
+  position: relative;
+  min-height: 100vh;
+  margin: 0;
+  background-color: #0f8592;
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
 main {
   margin: 10px;
   padding: 20px;
   height: 80%;
   text-align: center;
   letter-spacing: 0.2mm;
+}
+
+.about-me-photo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-me {
+  text-align: center; 
+  text-decoration: none;
+
+  li {
+    list-style: none;
+    align-items: center;
+  }
+
+  p {
+    padding-bottom: 10px;
+  }
+
+  a {
+    padding: 16px 32px;
+    background-color: #FCE0C1;
+    color: #032231;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-decoration: none;
+  }
+
+  a:hover {
+    background-color: #FAB588;
+  }
 }
 
 .blog {
@@ -74,20 +119,40 @@ main {
     }
   }
 
-form * { 
-  display: block;
-}
-    
-
-body {
-  min-height: 100vh;
-  margin: 0;
-  background-color: #0f8592;
-  color: white;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+form { 
+  border: solid transparent;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+label, input {
+  margin-top: 10px;
+  background-color: #FCE0C1;
+}
+
+.label input:focus + .placeholder {
+  top: -10px;
+  font-size: 10px;
+  color: #222;
+}
+
+#Message {
+  height: 200px;
+  align-items: center;
+  text-align: start;
+}
+
+button {
+  margin-top: 20px;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #FAB588;
+  color: #032231;
+}  
 
 .footer {
     position: relative;
