--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -101,6 +101,14 @@ main {
     display: flex;
 
     img {
+      padding: 40px 10px 40px 10px;
+      background-color: #FCE0C1;
+      width: 150px;
+      flex-direction: column;
+      align-items: left;
+    }
+
+    .my-pets {
       padding: 10px;
       background-color: #FCE0C1;
       width: 150px;
@@ -163,6 +171,7 @@ button:hover {
     background-repeat: repeat;
     background-attachment: scroll;
     background-position: 0% 0%;
+    flex-grow: 
 }
 
 .footer-contents {
