--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 140px;
+  flex-shrink: 0;
 }
 header .logo {
   display: flex;
@@ -45,10 +47,15 @@ body {
 
 main {
   margin: 10px;
-  padding: 20px;
+  padding: 40px;
   height: 80%;
   text-align: center;
   letter-spacing: 0.2mm;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .about-me-photo {
@@ -57,13 +64,14 @@ main {
   align-items: center;
 }
 
+li {
+  list-style: none;
+  align-items: center;
+}
+
 .about-me {
   text-align: center;
   text-decoration: none;
-}
-.about-me li {
-  list-style: none;
-  align-items: center;
 }
 .about-me p {
   padding-bottom: 10px;
@@ -91,17 +99,17 @@ main {
   margin: 10px;
   padding: 10px;
   background-color: #FAB588;
-  display: flex;
+  display: inline-flex;
 }
 .blog-cards img {
-  padding: 40px 10px 40px 10px;
+  padding: 100px 10px 100px 10px;
   background-color: #FCE0C1;
   width: 150px;
   flex-direction: column;
   align-items: left;
 }
 .blog-cards .my-pets {
-  padding: 10px;
+  padding: 10px 10px 10px 10px;
   background-color: #FCE0C1;
   width: 150px;
   flex-direction: column;
@@ -112,7 +120,7 @@ main {
   background-color: #FCE0C1;
   color: #032231;
   text-align: left;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-items: right;
 }
@@ -128,12 +136,6 @@ form {
 label, input {
   margin-top: 10px;
   background-color: #FCE0C1;
-}
-
-.label input:focus + .placeholder {
-  top: -10px;
-  font-size: 10px;
-  color: #222;
 }
 
 #Message {
@@ -153,14 +155,10 @@ button:hover {
 }
 
 .footer {
-  position: relative;
-  bottom: 0;
   background-color: #032231;
   height: 150px;
   width: 100%;
-  background-repeat: repeat;
-  background-attachment: scroll;
-  background-position: 0% 0%;
+  flex-shrink: 0;
 }
 
 .footer-contents {
@@ -174,26 +172,4 @@ button:hover {
 }
 .footer-contents p {
   flex-wrap: wrap;
-}
-
-@media screen and (min-width: 600px) {
-  .blog-cards {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  img {
-    flex-direction: column;
-    align-items: left;
-  }
-  .blog-text {
-    display: flex;
-    flex-direction: column;
-    align-items: right;
-  }
-  .footer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    line-height: 2mm;
-  }
 }/*# sourceMappingURL=style.css.map */
