--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -4,6 +4,8 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 140px;
+  flex-shrink: 0;
 
   .logo {
     display: flex;
@@ -48,26 +50,30 @@ body {
 
 main {
   margin: 10px;
-  padding: 20px;
+  padding: 40px;
   height: 80%;
   text-align: center;
   letter-spacing: 0.2mm;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 .about-me-photo {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+li {
+  list-style: none;
+  align-items: center;
+}
+
 .about-me {
   text-align: center; 
   text-decoration: none;
-
-  li {
-    list-style: none;
-    align-items: center;
-  }
 
   p {
     padding-bottom: 10px;
@@ -98,10 +104,10 @@ main {
     margin: 10px;
     padding: 10px;
     background-color: #FAB588;
-    display: flex;
+    display: inline-flex;
 
     img {
-      padding: 40px 10px 40px 10px;
+      padding: 100px 10px 100px 10px;
       background-color: #FCE0C1;
       width: 150px;
       flex-direction: column;
@@ -109,7 +115,7 @@ main {
     }
 
     .my-pets {
-      padding: 10px;
+      padding: 10px 10px 10px 10px;
       background-color: #FCE0C1;
       width: 150px;
       flex-direction: column;
@@ -121,7 +127,7 @@ main {
     background-color: #FCE0C1;
     color: #032231;
     text-align: left;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     align-items: right;
     }
@@ -140,12 +146,6 @@ label, input {
   background-color: #FCE0C1;
 }
 
-.label input:focus + .placeholder {
-  top: -10px;
-  font-size: 10px;
-  color: #222;
-}
-
 #Message {
   height: 200px;
   align-items: center;
@@ -162,16 +162,12 @@ button:hover {
   color: #032231;
 }  
 
+
 .footer {
-    position: relative;
-    bottom: 0;
-    background-color: #032231;
-    height: 150px;
-    width: 100%;
-    background-repeat: repeat;
-    background-attachment: scroll;
-    background-position: 0% 0%;
-    flex-grow: 
+  background-color: #032231;
+  height: 150px;
+  width: 100%;
+  flex-shrink: 0;
 }
 
 .footer-contents {
@@ -186,30 +182,5 @@ button:hover {
     p {
       flex-wrap: wrap;
     }
-  
 }
 
-@media screen and (min-width: 600px) {
-  .blog-cards {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  img {
-    flex-direction: column;
-    align-items: left;
-  }
-
-  .blog-text {
-    display: flex;
-    flex-direction: column;
-    align-items: right;
-  }
-
-  .footer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    line-height: 2mm;
-  }
-}
