Almost finished adding information for the My Pets blog post

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -60,7 +60,7 @@ main {
   align-items: center;
 }
 
-.about-me-photo {
+.photos {
   display: flex;
   justify-content: center;
   align-items: center;
