--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -61,7 +61,7 @@ main {
   justify-content: center;
   align-items: center;
 }
-.about-me-photo {
+.photos {
   display: flex;
   justify-content: center;
   align-items: center;
