almost completed readme.md and completed all pages.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,9 +67,12 @@ main {
   align-items: center;
 }
 
-li {
-  list-style: none;
+ul {
+  margin: auto 0px;
+  padding: 0px;
   align-items: center;
+  list-style-position: inside;
+  text-align: center;
 }
 
 .about-me {
